@@ -91,6 +91,9 @@
         <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/var/JAR_REPO/xalan/xalan/current/xalan.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/var/JAR_REPO/portlet-api/portlet-api/current/portlet-api.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         
         <property name="java-output-path" value="/target/classes/"/>
         <property name="context-root" value="wbemsmt-webapp"/>
